--- a/src/employeelist.css
+++ b/src/employeelist.css
@@ -14,7 +14,7 @@ body {
   min-height: 100vh;
 }
 
-h2 {
+.employee-header {
   color: white !important;
   text-align: center !important;
   margin-bottom: 20px !important;
